--- a/LibraryDream/LibraryDream/Views/Genre/Add.cshtml
+++ b/LibraryDream/LibraryDream/Views/Genre/Add.cshtml
@@ -14,16 +14,18 @@
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
 
-                @if (TempData["msg"] != null)
-                {
+                @if (TempData["msg"] != null){}
+
                     <div class="form-group">
-                        @TempData["msg"]
+                        <label asp-for="Name">Name *</label>
+                        <input type="text" class="form-control" asp=for="Name"/>
+                        <span asp-validation-for="Name" claclass="text-danger"></span>
                     </div>
                 }
-                <div class="form-group pt-3">
-                    <button type="submit" class="btn btn-dark"><i class="bi bi-save"></i> Save</button>
+                
+                    <button type="submit" class="btn-dark">Save</button>
                     <a href="/Genre/GetAll" class="btn btn-primary"> <i class="bi bi-list"></i>List</a>
-                </div>
+                
 
             </form>
         </div>
